aredn/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: wireguard-tunnel
  namespace: aredn
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: wireguard-tunnel
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: wireguard-tunnel
  egress:
  - to:
    - ipBlock:
        cidr: 18.189.227.206/32
